--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   border-bottom: 4px solid var(--blue-400);
   filter: drop-shadow(5px 0px 45px var(--blue-400));
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 .logo{
   img{
