--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -6,6 +6,8 @@
   align-items: end;
   padding: 0px 40px;
   box-sizing: border-box;
+  position: relative;
+  background-position: center;
 }
 
 .opacidad {
@@ -32,10 +34,11 @@
   span {
     font-size: 48px;
     font-weight: bolder;
-    max-width: auto;
+    width: 300px;
+    padding: 1rem 0px;
+    text-align: center;
     display: inline-block;
     border-radius: 15px;
-    padding: 1rem;
     box-sizing: border-box;
     background: var(--light-blue);
     margin-bottom: 40px;
@@ -72,5 +75,39 @@
     width: 100%;
     height: 100%;
     z-index: -100;
+  }
+}
+
+@media (max-width:1024px) {
+  
+  .container{
+    padding: 0px 28px;
+    width: auto;
+    margin-top: 100px ;
+    height: 70vh;
+  }
+  /* .opacidad {
+    height: 100%;
+  } */
+  .contenido{
+    margin-bottom: 10%;
+  }
+  .texto{
+    span, h4{
+      font-size: 32px;
+    }
+    p{
+      font-size: 16px;
+    }
+  }
+  .imagen{
+    max-width: 500px;
+    box-sizing: border-box;
+  }
+} 
+
+@media (max-width: 600px) {
+  .container{
+    display: none;
   }
 }
