--- a/src/components/Contenido/Card/card.module.css
+++ b/src/components/Contenido/Card/card.module.css
@@ -1,8 +1,9 @@
 .container{
-  max-width: 430px;
+  max-width: 380px;
   height: auto;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   overflow: hidden;
   border-radius: 15px;
   border: 5px solid var(--light-blue);
