--- a/src/components/Contenido/Categoria/categoria.module.css
+++ b/src/components/Contenido/Categoria/categoria.module.css
@@ -2,6 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  /* overflow: hidden; */
+  box-sizing: border-box;
   gap: 40px;
 }
 .titulo{
@@ -10,12 +12,41 @@
   max-width: 432px;
   text-align: center;
   border-radius: 15px;
-  padding: 10px 0px;
+  padding: 18px 0px;
   box-sizing: border-box;
   color: var(--white);
 }
 
 .cardContainer{
   display: flex;
+  overflow-x: auto;
+  padding-bottom: 40px;
   gap: 30px;
+  /* scrollbar-color: #2271D1 rgba(34, 113, 209, 17%) ;
+  scrollbar-width: 20px; */
+  /* appearance: none; */
+}
+.cardContainer::-webkit-scrollbar{
+  background: rgb(34, 113, 209, 17%);
+  border-radius: 20px;
+}
+.cardContainer::-webkit-scrollbar-thumb{
+  background-color: #2271D1;
+  border-radius: 20px;
+  border: 8px solid rgba(34, 113, 209, 17%);
+}
+
+@media (min-width: 600px) and (max-width: 1024px) {
+  .container {
+    align-items: center;
+    gap: 30px;
+  }
+  .titulo {
+    font-size: 32px;
+    width: 432px;
+  }
+  .cardContainer {
+    align-self: flex-start;
+    width: 100%;
+  }
 }
