--- a/src/components/Contenido/contenido.module.css
+++ b/src/components/Contenido/contenido.module.css
@@ -6,3 +6,15 @@
   gap: 80px;
   box-sizing: border-box;
 }
+
+@media (min-width: 600px) and (max-width: 1024px) {
+  .container{
+    padding: 90px 28px;
+  }
+}
+
+@media (max-width:599px) {
+  .container{
+    margin-bottom: 100px;
+  }
+}
