--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -21,3 +21,20 @@
   display: flex;
   gap: 25px;
 }
+
+@media (max-width: 600px) {
+  .encabezado{
+    bottom: 0;
+    top: auto;
+    border-bottom: none;
+    border-top: 4px solid var(--blue-400);
+
+  }
+  .logo{
+    display: none;
+  }
+  .links{
+    width: 100%;
+    justify-content: space-around;
+  }
+}
