dia 11 (pagina de nuevo video finalizada)

--- a/src/components/Contenido/Card/card.module.css
+++ b/src/components/Contenido/Card/card.module.css
@@ -9,6 +9,12 @@
   border: 5px solid var(--light-blue);
   box-shadow:inset 0 0 12px var(--light-blue);
 }
+.containerImg{
+  img{
+    width: 100%;
+    height: 260px;
+  }
+}
 .containerIconos{
   width: 100%;
   display: flex;
