--- a/src/components/Imputs/inputsStyle.module.css
+++ b/src/components/Imputs/inputsStyle.module.css
@@ -7,7 +7,7 @@ textarea{
   width: 100%;
   padding: 16px 10px;
   background: none;
-  border: 3px solid var(--blue-400);
+  border: 3px solid;
   border-radius: 10px;
   box-sizing: border-box;
   margin-top: 15px;
@@ -22,6 +22,8 @@ label{
 
 
 select{
+  display: block;
+  font-family: "Roboto", sans-serif;
   appearance: none;
   background-image: url('./../../../public/img/icon/arrow.svg');
   background-repeat: no-repeat;
@@ -29,8 +31,9 @@ select{
 } 
 
 textarea{
+  max-width: 300px;
   min-width: 100%;
-  max-width: 100%;
+  display: block;
   min-height: 112px;
   font-family: "Roboto", sans-serif;
 }
