--- a/src/components/ModalEdit/modal.module.css
+++ b/src/components/ModalEdit/modal.module.css
@@ -24,27 +24,18 @@
   border-radius: 15px;
   padding: 84px 100px;
   position: relative;
+  .titulo{
+    font-size: 40px;
+    font-weight: bold;
+    align-self: flex-start;
+    color: var(--blue-400);
+  }
 }
+
 .exit{
   border: none;
   background: none;
   position: absolute;
   top: 30px;
   right: 30px;
-}
-form{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  h2{
-    font-size: 40px;
-    text-align: left;
-    font-weight: bold;
-    color: var(--blue-400);
-  }
-}
-.botones{
-  display: flex;
-  justify-content: space-between;
 }
